# tradewinds

./: .env_example  .gitignore  .markdownlint.yaml  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  rustfmt.toml
tradewinds-api/: Cargo.toml
tradewinds-api/src/: lib.rs
tradewinds-api/src/api/: mod.rs
tradewinds-api/src/api/controllers/: auth_controller.rs  mod.rs  permission_controller.rs  role_controller.rs  system_setting_controller.rs  user_controller.rs
tradewinds-api/src/api/dtos/: auth_dto.rs  mod.rs  permission_dto.rs  role_dto.rs  system_setting_dto.rs  user_dto.rs
tradewinds-api/src/api/handlers/: auth_handler.rs  mod.rs  permission_handler.rs  role_handler.rs  system_setting_handler.rs  user_handler.rs
tradewinds-api/src/api/mappers/: auth_mapper.rs  mod.rs  permission_mapper.rs  role_mapper.rs  system_setting_mapper.rs  user_mapper.rs
tradewinds-api/src/api/middlewares/: mod.rs
tradewinds-api/src/api/routes/: auth_routes.rs  mod.rs  permission_routes.rs  role_routes.rs  system_setting_routes.rs  user_routes.rs
tradewinds-api/src/api/state/: mod.rs
tradewinds-api/src/api/validators/: auth.rs  auth_validator.rs  mod.rs
tradewinds-api/src/graphql/: mod.rs
tradewinds-api/src/grpc/: mod.rs
tradewinds-api/src/http/: mod.rs
tradewinds-api/src/websocket/: mod.rs
tradewinds-application/: Cargo.toml
tradewinds-application/src/: lib.rs
tradewinds-application/src/commands/: mod.rs
tradewinds-application/src/commands/auth/: change_password_command.rs  login_command.rs  logout_command.rs  mod.rs  register_command.rs
tradewinds-application/src/commands/permission/: create_permission_command.rs  delete_permission_command.rs  mod.rs  update_permission_command.rs
tradewinds-application/src/commands/role/: assign_permission_command.rs  create_role_command.rs  delete_role_command.rs  mod.rs  revoke_permission_command.rs  update_role_command.rs
tradewinds-application/src/commands/system_setting/: mod.rs  set_system_setting_command.rs
tradewinds-application/src/commands/user/: assign_role_command.rs  create_user_command.rs  delete_user_command.rs  mod.rs  reset_password_command.rs  revoke_role_command.rs  update_user_command.rs
tradewinds-application/src/events/: mod.rs  prelude.rs
tradewinds-application/src/events/auth/: mod.rs  user_logged_in_event.rs  user_logged_out_event.rs  user_password_changed_event.rs  user_registered_event.rs
tradewinds-application/src/events/role/: mod.rs  role_created_event.rs  role_deleted_event.rs  role_updated_event.rs
tradewinds-application/src/events/user/: mod.rs  user_created_event.rs  user_deleted_event.rs  user_profile_updated_event.rs  user_role_assigned_event.rs  user_role_revoked_event.rs  user_status_changed_event.rs  user_updated_event.rs
tradewinds-application/src/interfaces/: auth_service.rs  mod.rs  permission_service.rs  role_service.rs  system_setting_service.rs  user_service.rs
tradewinds-application/src/queries/: mod.rs
tradewinds-application/src/queries/auth/: get_current_user_query.rs  get_user_menus_query.rs  menu_info.rs  mod.rs  user_info.rs
tradewinds-application/src/queries/permission/: get_permission_by_code_query.rs  get_permission_by_id_query.rs  get_permission_by_name_query.rs  list_all_permissions_query.rs  list_permissions_by_parent_id_query.rs  list_permissions_by_type_query.rs  list_permissions_query.rs  mod.rs
tradewinds-application/src/queries/role/: get_role_by_id_query.rs  list_roles_query.rs  (+3 more)
tradewinds-application/src/services/: auth_service.rs  mod.rs  permission_service.rs  role_service.rs  system_setting_service.rs  user_service.rs
tradewinds-domain/: Cargo.toml
tradewinds-domain/src/: lib.rs
tradewinds-domain/src/aggregates/: mod.rs  permission_aggregate.rs  role_aggregate.rs  user_aggregate.rs
tradewinds-domain/src/entities/: mod.rs  permission.rs  role.rs  role_permission.rs  system_setting.rs  user.rs  user_role.rs
tradewinds-domain/src/repositories/: mod.rs  permission_aggregate_repository.rs  permission_repository.rs  role_aggregate_repository.rs  role_permission_repository.rs  role_repository.rs  system_setting_repository.rs  token_blacklist_repository.rs  user_aggregate_repository.rs  user_repository.rs  user_role_repository.rs
tradewinds-domain/src/services/: event_bus.rs  mod.rs
tradewinds-domain/src/specifications/: mod.rs  password_strength_specification.rs  specification.rs
tradewinds-domain/src/value_objects/: mod.rs
tradewinds-error/: Cargo.toml
tradewinds-error/src/: lib.rs
tradewinds-infrastructure/: Cargo.toml
tradewinds-infrastructure/src/: dependency_injection.rs  lib.rs
tradewinds-infrastructure/src/cache/: mod.rs  redis_cache.rs
tradewinds-infrastructure/src/config/: app_config.rs
tradewinds-infrastructure/src/di/: auth_di.rs  mod.rs  permission_di.rs  role_di.rs  system_setting_di.rs  user_di.rs
tradewinds-infrastructure/src/event_bus/: mod.rs  redis_event_bus.rs
tradewinds-infrastructure/src/logging/: mod.rs
tradewinds-infrastructure/src/messaging/: mod.rs  rabbitmq.rs
tradewinds-infrastructure/src/persistence/: mod.rs
(+159 files in other folders)
