[package]
name = "tradewinds-domain"
version = "0.1.0"
edition = "2024"

[dependencies]
tradewinds-error = { path = "../tradewinds-error" }

serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
derive_more = { version = "2.0.1", features = [
    "deref",
    "from",
    "into",
    "display",
] }
bcrypt = "0.17.0"
async-trait = "0.1"