[package]
name = "tradewinds-error"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["macros"] }
bcrypt = "0.17.0"
serde_json = "1.0"
thiserror = "2.0.12"
redis = { version = "0.32.2", features = ["tokio-comp"] }
uuid = { version = "1.0", features = ["serde", "v4"] }
tracing = "0.1"
sea-orm = { version = "1.1.12", features = ["macros"] }