[package]
name = "tradewinds-infrastructure"
version = "0.1.0"
edition = "2024"

[dependencies]
tradewinds-domain = { path = "../tradewinds-domain" }
tradewinds-error = { path = "../tradewinds-error" }
tradewinds-common = { path = "../tradewinds-common" }
tradewinds-application = { path = "../tradewinds-application" }

sea-orm-migration = "1.1.12"
sea-orm = { version = "1.1.12", features = [
    "runtime-tokio-rustls",
    "sqlx-mysql",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json",
] }
lapin = "3.0.0"
chrono = "0.4"
serde_json = "1"
anyhow = "1"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
lettre = { version = "0.11.17", default-features = false, features = [
    "tokio1",
    "tokio1-rustls-tls",
    "smtp-transport",
    "builder",
    "rustls-tls",
    "hostname",
    "pool",
] }
bcrypt = "0.17.0"
redis = "0.32.2"
serde = { version = "1", features = ["derive"] }
futures-util = "0.3"
jsonwebtoken = "9.3.1"
uuid = { version = "1.0", features = ["v4"] }
